--- a/BrightLandsWayfinding/Views/Rooms/UserDetails.cshtml
+++ b/BrightLandsWayfinding/Views/Rooms/UserDetails.cshtml
@@ -1,4 +1,6 @@
 ﻿@using BrightLandsWayfinding.Models.Companies
+@using BrightLandsWayfinding.Models.MapRoutes
+@using BrightLandsWayfinding.Models.Steps
 @model BrightLandsWayfinding.Models.Rooms.Room
 
 @{
@@ -11,26 +13,47 @@
 <div>
     <h4>Room</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Story)
-        </dt>
-        <dd class = "col-sm-10">
-            <a asp-controller="Stories" asp-action="UserDetails" asp-route-id="@Model.StoryID">@Html.DisplayFor(model => model.Story.Name)</a>
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Type)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Type)
-        </dd>
-    </dl>
+    <div class="row">
+        <div class="col-5">
+                <dl class="row">
+                    <dt class = "col-sm-2">
+                                @Html.DisplayNameFor(model => model.Name)
+                    </dt>
+                    <dd class = "col-sm-10">
+                                @Html.DisplayFor(model => model.Name)
+                    </dd>
+                    <dt class = "col-sm-2">
+                                @Html.DisplayNameFor(model => model.Story)
+                    </dt>
+                    <dd class = "col-sm-10">
+                        <a asp-controller="Stories" asp-action="UserDetails" asp-route-id="@Model.StoryID">@Html.DisplayFor(model => model.Story.Name)</a>
+                    </dd>
+                    <dt class = "col-sm-2">
+                                @Html.DisplayNameFor(model => model.Type)
+                    </dt>
+                    <dd class = "col-sm-10">
+                                @Html.DisplayFor(model => model.Type)
+                    </dd>
+                </dl>
+            </div>
+        <div class="col-5">
+            <div class="card text-center">
+                <h2 class="card-header">Routes</h2>
+                <div class="card-body">
+                    @{
+                        foreach(MapRoute r in ViewBag.Routes){
+                            <div class="row">
+                                <div class="col-1">@r.ID</div>
+                                <div class="col-9">@r.Description</div>
+                            </div>
+                            <hr />
+                        }
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 <div class="card">
     <h3 class="card-header">Company</h3>
@@ -42,14 +65,14 @@
                 {
                     if (c.RoomID == Model.ID)
                     {
-                                                    <div class="row">
-                                                                    <div class="col-8"><a asp-controller="Companies" asp-action="UserDetails" asp-route-id="@c.ID">@c.Name</a></div>
-                                                    </div>
+                                                                                    <div class="row">
+                                                                                                    <div class="col-8"><a asp-controller="Companies" asp-action="UserDetails" asp-route-id="@c.ID">@c.Name</a></div>
+                                                                                    </div>
 
                     }
                     else
                     {
-                                        <p class="alert-warning">This room doesnt have a company yet! </p>
+                                                                        <p class="alert-warning">This room doesnt have a company yet! </p>
                         break;
                     }
                 }
