--- a/BrightLandsWayfinding/Views/Shared/_Layout.cshtml
+++ b/BrightLandsWayfinding/Views/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
                         <!-- sidebar menu -->
                         <ul class="nav sidebar-inner" id="sidebar-menu">
                             <li class="has-sub">
-                                <a class="sidenav-item-link" asp-controller="Home" asp-action="Index">
+                                <a class="sidenav-item-link" asp-controller="Home" asp-action="UserIndex">
                                     <i class="mdi mdi-view-dashboard-outline"></i>
                                     <span class="nav-text">Dashboard</span> @*<b class="caret"></b>*@
                                 </a>
@@ -137,7 +137,7 @@
                                     @{
                                         foreach (Company c in ViewBag.Companies)
                                         {
-                                                                                                    <li class="nav-link-style"><span class="nav-text"><a style="color: #A29A99; text-decoration: none; background-color: font-size: 16px;transparent; margin: 10px 0 10px 0;" asp-controller="Companies" asp-action="Details" asp-route-id="@c.ID" >@c.Name</a></span></li>
+                                            <li class="nav-link-style"><span class="nav-text"><a style="color: #A29A99; text-decoration: none; background-color: font-size: 16px;transparent; margin: 10px 0 10px 0;" asp-controller="Companies" asp-action="UserDetails" asp-route-id="@c.ID" >@c.Name</a></span></li>
 
                                         }
 
@@ -172,7 +172,7 @@
                                     @{
                                         foreach (User u in ViewBag.Users)
                                         {
-                                                    <li class="nav-link-style"><span class="nav-text"><a style="color: #A29A99; text-decoration: none; background-color: font-size: 16px;transparent; margin: 10px 0 10px 0;" asp-controller="Users" asp-action="Details" asp-route-id="@u.ID" >@u.Name @u.Surname</a></span></li>
+                                                    <li class="nav-link-style"><span class="nav-text"><a style="color: #A29A99; text-decoration: none; background-color: font-size: 16px;transparent; margin: 10px 0 10px 0;" asp-controller="Users" asp-action="UserDetails" asp-route-id="@u.ID" >@u.Name @u.Surname</a></span></li>
 
                                         }
 
